# evolution_text_analyzer

./: .gitignore  README.md  config.json  create_evolution_texts.py  create_snomed_normalized_icd_dataset.py  dataset.csv  ed_test.py  evolution_texts.csv  evolution_texts_resolved.csv  evolution_texts_resolved_simple.csv  hello.py  historiales_resueltos.csv  icd_dataset.csv  main.py  models.json  p.py  pyproject.toml  requirements.txt
analyzer/: __init__.py  _validator.py  auxiliary_functions.py  parallel_ollama_et_analyzer.py  parallel_ollama_et_analyzer_cie.py  validator.py
evolution_text_analyzer/: __init__.py  _custom_output_parser.py  _custom_parser.py  _validator.py  analyzer.py  analyzer_HF.py  auxiliary_functions.py  data_models.py  llm_tester.py  results_manager.py  tester.py  utils.py
models_list/: models_list.json
scripts/: _validator.py  analyzer.py  analyzer_HF.py  auxiliary_functions.py  llm_tester.py  prompt_tester.py
testing/: evolution_texts.csv  evolution_texts_simple.csv
testing_results/: results_allListedModels.json  results_meditron_7b-q8_0.json
