[project]
name = "evolution-text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain-ollama>=0.2.3",
    "langchain>=0.3.18",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "transformers>=4.49.0",
    "accelerate>=1.6.0",
]
