[project]
name = "evolution-text-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "~=3.10"
dependencies = [
    "langchain-ollama>=0.2.3",
    "langchain>=0.3.18",
    "ollama>=0.4.7",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "langchain-community>=0.3.21",
    "langchain-chroma>=0.2.2",
]
